# mops-cli

./: .gitignore  Cargo.toml  README.md  canister.toml
.github/workflows/: release.yml
src/: binary_cache.rs  build.rs  env.rs  github.rs  main.rs  mops.rs  storage.rs  toml.rs  utils.rs
test/: main.mo  mops.toml
